[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anunnaki_source"
version = "0.0.3"
authors = [
  { name="Hasan Pasha", email="bashahsn22@gmail.com" },
]
description = "source lib that extensions depend on"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hasanpasha/anunnaki-source"
"Bug Tracker" = "https://github.com/hasanpasha/anunnaki-source/issues"
