[tool.poetry]
name = "anunnaki-source"
version = "0.1.0"
description = ""
authors = ["hasna pasha <38372270+hasanpasha@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "anunnaki_source", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
